change in line 13

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
    line-height: 1.6;
    color: #333;
    overflow-x: hidden;
-   background: #f8f9ff;
+   background: #010622;
 }
 
 .container {
